2002-08-25  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (dest_size_cb), (frame_output_cb), (xine_thread),
	(gtk_xine_realize), (gtk_xine_set_fullscreen),
	(gtk_xine_set_scale_ratio): kill fullscreen_width/height and the
	toplevel Window
	* src/video-utils.c: (wmspec_change_state),
	(gdk_window_set_fullscreen), (eel_gdk_window_set_invisible_cursor):
	* src/video-utils.h: some bug fixes wrt fullscreen

2002-08-25  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (load_video_out_driver), (load_audio_out_driver),
	(gtk_xine_realize), (gtk_xine_set_fullscreen),
	(gtk_xine_set_show_cursor): some little leaks plugged, use a GdkWindow
	for the full-screen window
	* src/video-utils.c: (wmspec_change_gdk_window_state),
	(gdk_window_set_fullscreen), (eel_gdk_window_set_invisible_cursor):
	borrow eel's cursor hiding stuff, use GdkWindows when possible
	* src/video-utils.h: api change

2002-08-25  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (load_video_out_driver), (gtk_xine_realize):
	use the gdk functions instead of the X ones when possible

2002-08-24  Christian Neumair  <christian-neumair@web.de>

	* configure.in (ALL_LINGUAS): Added German (de).

============ Version 0.9.1

2002-08-24  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* configure.in: 0.9.1
	* data/.cvsignore: upd
	* data/Makefile.am: upd
	* data/gtk-xine.schemas.in: removed
	* data/totem.schemas.in: added
	* src/gtk-xine.c: (load_config_from_gconf): change default
	* src/scrsaver.c: (fake_event), (scrsaver_disable),
	(scrsaver_enable): cleanups

============ Version 0.9

2002-08-24  Bastien Nocera  <hadess@hadess.net>

	* README: added 0.9 release details
	* configure.in: 0.9

2002-08-24  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: disable DVD and VCD, as there's no code behind
	them yet

2002-08-24  Bastien Nocera  <hadess@hadess.net>

	* README:
	* data/totem.glade: added 1:2 zoom
	* src/gtk-xine.c: (gtk_xine_set_scale_ratio): implement with mucho