@@ -1,3 +1,9 @@
+2002-08-26  Bastien Nocera  <hadess@hadess.net>
+
+	* data/totem.glade:
+	* src/totem.c: (action_set_mrl): get the sensitivity right on the
+	next/previous, and skip buttons
+
 2002-08-25  Bastien Nocera  <hadess@hadess.net>
 
 	* src/gtk-xine.c: (dest_size_cb), (frame_output_cb), (xine_thread),
